# deckhand

./: .gitignore  README.md  appcast.xml  pyproject.toml
deckhand/: __main__.py  ankiconnect.py  app.py  config.py  drive.py  logger.py  sync.py
deckhand/assets/: AppIcon.icns
docs/superpowers/plans/: 2026-04-19-deckhand.md
docs/superpowers/specs/: 2026-04-19-deckhand-design.md
scripts/: build.sh  release.sh
tests/: conftest.py  test_ankiconnect.py  test_config.py  test_drive.py  test_logger.py  test_sync.py
