[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deckhand"
version = "0.1.4"
description = "macOS menu bar app that merges Anki decks across Desktop, Mobile, and AnkiWeb"
requires-python = ">=3.11"
dependencies = [
    "rumps>=0.4.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
deckhand = "deckhand.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
